<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        style="@style/MyTitle"
        android:text="@string/title"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_weight="1"/>

    <Button
        style="@style/MyButton"
        android:id="@+id/spotify"
        android:layout_weight="1"
        android:text="@string/spotify"
        android:onClick="displayToast"/>

    <Button
        style="@style/MyButton"
        android:id="@+id/scores"
        android:layout_weight="1"
        android:text="@string/scores"
        android:onClick="displayToast"/>

    <Button
        style="@style/MyButton"
        android:id="@+id/library"
        android:layout_weight="1"
        android:text="@string/library"
        android:onClick="displayToast"/>

    <Button
        style="@style/MyButton"
        android:id="@+id/buildit"
        android:layout_weight="1"
        android:text="@string/buildit"
        android:onClick="displayToast"/>

    <Button
        style="@style/MyButton"
        android:id="@+id/xyz"
        android:layout_weight="1"
        android:text="@string/xyz"
        android:onClick="displayToast"/>

    <Button
        style="@style/MyButton"
        android:id="@+id/capstone"
        android:layout_weight="1"
        android:text="@string/capstone"
        android:onClick="displayToast"/>

</LinearLayout>
